[gd_scene load_steps=4 format=3 uid="uid://c3762hd83mnfk"]

[ext_resource type="Script" uid="uid://crorwh6v6xsle" path="res://scenes/local_lobby/local_lobby.gd" id="1_fc5ln"]
[ext_resource type="Texture2D" uid="uid://e56daf0rtn6l" path="res://assets/images/background.jpg" id="2_l022d"]
[ext_resource type="Texture2D" uid="uid://cr20hx020sdy3" path="res://assets/images/back_button.png" id="3_l022d"]

[node name="LocalLobby" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_fc5ln")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -174.0
offset_top = -176.0
offset_right = 1326.0
offset_bottom = 824.0
texture = ExtResource("2_l022d")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 1.0
offset_right = 1154.0
offset_bottom = 651.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="MainVContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/MainVContainer"]
layout_mode = 2

[node name="BackButton" type="TextureButton" parent="MarginContainer/MainVContainer/HBoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("3_l022d")

[node name="PageTitle" type="Label" parent="MarginContainer/MainVContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "ðŸš€ YOUR LOCAL LOBBY ðŸš€"
horizontal_alignment = 1
vertical_alignment = 2

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer/MainVContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MainVContainer"]
layout_mode = 2

[node name="PlayerCountButtonsConatiner" type="HBoxContainer" parent="MarginContainer/MainVContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="RemovePlayerButton" type="Button" parent="MarginContainer/MainVContainer/PlayerCountButtonsConatiner"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Remove Player âž–
"

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/MainVContainer/PlayerCountButtonsConatiner"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2

[node name="AddPlayerButton" type="Button" parent="MarginContainer/MainVContainer/PlayerCountButtonsConatiner"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Add Player âž•
"

[node name="PlayersContainer" type="VBoxContainer" parent="MarginContainer/MainVContainer"]
custom_minimum_size = Vector2(0, 350)
layout_mode = 2

[node name="GeneralButtonsContainer" type="HBoxContainer" parent="MarginContainer/MainVContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
alignment = 1

[node name="StartButton" type="Button" parent="MarginContainer/MainVContainer/GeneralButtonsContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "START GAME ðŸŽ¬
"
